@@ -1,4 +1,5 @@
 0.5.0
+- Fix: Event registration is stuck when payment methods are not shown (#508)
 - Change: Hide the column "list of registrations" in the list of events for a certain topic" (#482)
 - Change: Made the date field linked in the list view (#481)
 - Fix: Registration is stuck for events without any payment methods (#498)
